--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -1,17 +1,31 @@
+<div class="search-form">
+	<%= form_tag actors_path, :method => 'get' do %>
+
+		<p><%= text_field_tag :search, params[:search], :placeholder => "Enter an actor's name..." %></p>
+		<p><%= submit_tag "Search", :name => nil %></p>
+		
+
+	<% end %>
+</div>
+
 <ul class="actors">
-<% @actors.each do |a| %>
 
-<li>
+<% if @actors.any? %>
 
-<% if a.image_path.nil? %>
+	<% @actors.each do |a| %>
+
+		<li>
+			<% if a.image_path.nil? %>
 
 
-<% else %>
+			<% else %>
 
-	<%= link_to (image_tag "http:" + a.image_path), actor_path(a) %>
+				<%= link_to (image_tag "http:" + a.image_path), actor_path(a) %>
 
-<% end %>
-</li>
+			<% end %>
+		</li>
+	<% end %>
+
 <% end %>
 
 </ul>
