--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -8,24 +8,27 @@
 	<% end %>
 </div>
 
-<ul class="actors">
-
 <% if @actors.any? %>
+	<ul class="actors">
 
-	<% @actors.each do |a| %>
+		<% @actors.each do |a| %>
 
-		<li>
-			<% if a.image_path.nil? %>
+			<li>
+				<% if a.image_path.nil? %>
 
 
-			<% else %>
+				<% else %>
 
-				<%= link_to (image_tag "http:" + a.image_path), actor_path(a) %>
+					<%= link_to (image_tag "http:" + a.image_path), actor_path(a) %>
 
-			<% end %>
-		</li>
-	<% end %>
+				<% end %>
+			</li>
+		<% end %>
+
+	</ul>
+<% else %>
+
+	<p class='no-results'>No results found</p>
 
 <% end %>
 
-</ul>
