Added endless page, and did some formatting to the index page

--- a/app/views/actors/index.js.erb
+++ b/app/views/actors/index.js.erb
@@ -1,1 +1,1 @@
-$("#divactors").append("<div class='page'><%= escape_javascript(render(@actors)) %></div>");
+$(".actor").last().append("<%= escape_javascript(render(@actors)) %>");
