--- a/app/assets/stylesheets/actors.css.scss
+++ b/app/assets/stylesheets/actors.css.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#actors {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 1200px;
+}
+
 ul.actors {
 	list-style-type: none;
 	li img {
