--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Wikishow</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application", "endless_page", "jquery.sausage" %>
+  <%= javascript_include_tag "application", "jquery.sausage" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
