Fixing the endless js to append to the correct div element

--- a/app/views/actors/index.js.erb
+++ b/app/views/actors/index.js.erb
@@ -1,1 +1,1 @@
-$(".actor").last().append("<%= escape_javascript(render(@actors)) %>");
+$(".actor").last().parent().append("<%= escape_javascript(render(@actors)) %>");
