--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -1,12 +1,6 @@
-<div class="search-form">
-	<%= form_tag actors_path, :method => 'get' do %>
-
-		<p><%= text_field_tag :search, params[:search], :placeholder => "Enter an actor's name..." %></p>
-		<p><%= submit_tag "Search", :name => nil %></p>
-
-
-	<% end %>
-</div>
+<%= render :partial => 'forms/search_form', :locals => { :methodtype => 'get',
+														 :url_back => actors_path,
+														 :placeholder => "Enter an actor's name..." } %>
 
 <% if @actors.any? %>
 	<div id="actors">
